# python-template

./: .gitignore  makefile  pyproject.toml  requirements.dev.txt  requirements.source.txt  requirements.txt  setup.py  template.py
.github/workflows/: continuous-integration.yaml
